# test2

./: .env  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yaml  env  env_example  init_model.py  prompt.json  pyproject.toml  requirements.txt  run_app.py  sd_inf_1.py  sd_process.py  sd_t2i.py
example/: prompt.json  result.json
sdgenxxx/: __init__.py
sdkit/generate/: image_generator.py  prompt_parser.py
sdkit/utils/: __init__.py
