[tool.poetry]
name = "experiments2"
version = "0.1.0"
description = ""
authors = ["mset"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.16"
sdkit = "^1.0.47"
ipywidgets = "^8.0.4"
pynvml = "^11.5.0"
xformers = "^0.0.16"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
